// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create_cast.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DefineStmt": {
          "defnames": [
            {
              "String": {
                "sval": "casttesttype",
              },
            },
          ],
          "kind": "OBJECT_TYPE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 7 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateFunctionStmt": {
          "funcname": [
            {
              "String": {
                "sval": "casttesttype_in",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "String": {
                          "sval": "textin",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "as",
                "location": 70,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "internal",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "language",
                "location": 85,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "Boolean": {
                    "boolval": true,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "strict",
                "location": 103,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "immutable",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "volatility",
                "location": 110,
              },
            },
          ],
          "parameters": [
            {
              "FunctionParameter": {
                "argType": {
                  "location": 34,
                  "names": [
                    {
                      "String": {
                        "sval": "cstring",
                      },
                    },
                  ],
                  "typemod": -1,
                },
                "mode": "FUNC_PARAM_DEFAULT",
              },
            },
          ],
          "returnType": {
            "location": 54,
            "names": [
              {
                "String": {
                  "sval": "casttesttype",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 12 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateFunctionStmt": {
          "funcname": [
            {
              "String": {
                "sval": "casttesttype_out",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "String": {
                          "sval": "textout",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "as",
                "location": 70,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "internal",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "language",
                "location": 86,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "Boolean": {
                    "boolval": true,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "strict",
                "location": 104,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "immutable",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "volatility",
                "location": 111,
              },
            },
          ],
          "parameters": [
            {
              "FunctionParameter": {
                "argType": {
                  "location": 34,
                  "names": [
                    {
                      "String": {
                        "sval": "casttesttype",
                      },
                    },
                  ],
                  "typemod": -1,
                },
                "mode": "FUNC_PARAM_DEFAULT",
              },
            },
          ],
          "returnType": {
            "location": 59,
            "names": [
              {
                "String": {
                  "sval": "cstring",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 16 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DefineStmt": {
          "definition": [
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 49,
                    "names": [
                      {
                        "String": {
                          "sval": "variable",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "internallength",
                "location": 32,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 70,
                    "names": [
                      {
                        "String": {
                          "sval": "casttesttype_in",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "input",
                "location": 62,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 99,
                    "names": [
                      {
                        "String": {
                          "sval": "casttesttype_out",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "output",
                "location": 90,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "TypeName": {
                    "location": 132,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "alignment",
                "location": 120,
              },
            },
          ],
          "defnames": [
            {
              "String": {
                "sval": "casttesttype",
              },
            },
          ],
          "kind": "OBJECT_TYPE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 23 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateFunctionStmt": {
          "funcname": [
            {
              "String": {
                "sval": "casttestfunc",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "sql",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "language",
                "location": 91,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "String": {
                          "sval": " SELECT 1; ",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "as",
                "location": 104,
              },
            },
          ],
          "parameters": [
            {
              "FunctionParameter": {
                "argType": {
                  "location": 64,
                  "names": [
                    {
                      "String": {
                        "sval": "casttesttype",
                      },
                    },
                  ],
                  "typemod": -1,
                },
                "mode": "FUNC_PARAM_DEFAULT",
              },
            },
          ],
          "returnType": {
            "location": 86,
            "names": [
              {
                "String": {
                  "sval": "int4",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 27 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 22,
                              "sval": {
                                "sval": "foo",
                              },
                            },
                          },
                          "location": 27,
                          "typeName": {
                            "location": 29,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "casttestfunc",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 28 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateCastStmt": {
          "context": "COERCION_EXPLICIT",
          "sourcetype": {
            "location": 72,
            "names": [
              {
                "String": {
                  "sval": "text",
                },
              },
            ],
            "typemod": -1,
          },
          "targettype": {
            "location": 80,
            "names": [
              {
                "String": {
                  "sval": "casttesttype",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 32 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 21,
                              "sval": {
                                "sval": "foo",
                              },
                            },
                          },
                          "location": 26,
                          "typeName": {
                            "location": 28,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "casttestfunc",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 32 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 49,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "TypeCast": {
                              "arg": {
                                "A_Const": {
                                  "location": 62,
                                  "sval": {
                                    "sval": "foo",
                                  },
                                },
                              },
                              "location": 67,
                              "typeName": {
                                "location": 69,
                                "names": [
                                  {
                                    "String": {
                                      "sval": "text",
                                    },
                                  },
                                ],
                                "typemod": -1,
                              },
                            },
                          },
                          "location": 73,
                          "typeName": {
                            "location": 75,
                            "names": [
                              {
                                "String": {
                                  "sval": "casttesttype",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "casttestfunc",
                        },
                      },
                    ],
                    "location": 49,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 33 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "TypeName": {
                      "location": 27,
                      "names": [
                        {
                          "String": {
                            "sval": "text",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  {
                    "TypeName": {
                      "location": 35,
                      "names": [
                        {
                          "String": {
                            "sval": "casttesttype",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_CAST",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 34 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateCastStmt": {
          "context": "COERCION_IMPLICIT",
          "sourcetype": {
            "location": 63,
            "names": [
              {
                "String": {
                  "sval": "text",
                },
              },
            ],
            "typemod": -1,
          },
          "targettype": {
            "location": 71,
            "names": [
              {
                "String": {
                  "sval": "casttesttype",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 38 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 21,
                              "sval": {
                                "sval": "foo",
                              },
                            },
                          },
                          "location": 26,
                          "typeName": {
                            "location": 28,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "casttestfunc",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 38 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 56,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {
                              "ival": 1234,
                            },
                            "location": 56,
                          },
                        },
                        "location": 60,
                        "typeName": {
                          "location": 62,
                          "names": [
                            {
                              "String": {
                                "sval": "int4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 66,
                    "typeName": {
                      "location": 68,
                      "names": [
                        {
                          "String": {
                            "sval": "casttesttype",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 41 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateCastStmt": {
          "context": "COERCION_EXPLICIT",
          "inout": true,
          "sourcetype": {
            "location": 43,
            "names": [
              {
                "String": {
                  "sval": "int4",
                },
              },
            ],
            "typemod": -1,
          },
          "targettype": {
            "location": 51,
            "names": [
              {
                "String": {
                  "sval": "casttesttype",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 44 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {
                              "ival": 1234,
                            },
                            "location": 8,
                          },
                        },
                        "location": 12,
                        "typeName": {
                          "location": 14,
                          "names": [
                            {
                              "String": {
                                "sval": "int4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 18,
                    "typeName": {
                      "location": 20,
                      "names": [
                        {
                          "String": {
                            "sval": "casttesttype",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 44 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "TypeName": {
                      "location": 32,
                      "names": [
                        {
                          "String": {
                            "sval": "int4",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  {
                    "TypeName": {
                      "location": 40,
                      "names": [
                        {
                          "String": {
                            "sval": "casttesttype",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_CAST",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 47 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateFunctionStmt": {
          "funcname": [
            {
              "String": {
                "sval": "int4_casttesttype",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "sql",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "language",
                "location": 92,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "String": {
                          "sval": " SELECT ('foo'::text || $1::text)::casttesttype; ",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "as",
                "location": 105,
              },
            },
          ],
          "parameters": [
            {
              "FunctionParameter": {
                "argType": {
                  "location": 65,
                  "names": [
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
                "mode": "FUNC_PARAM_DEFAULT",
              },
            },
          ],
          "returnType": {
            "location": 79,
            "names": [
              {
                "String": {
                  "sval": "casttesttype",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 52 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateCastStmt": {
          "context": "COERCION_IMPLICIT",
          "func": {
            "objargs": [
              {
                "TypeName": {
                  "location": 69,
                  "names": [
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            ],
            "objfuncargs": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 69,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                },
              },
            ],
            "objname": [
              {
                "String": {
                  "sval": "int4_casttesttype",
                },
              },
            ],
          },
          "sourcetype": {
            "location": 15,
            "names": [
              {
                "String": {
                  "sval": "int4",
                },
              },
            ],
            "typemod": -1,
          },
          "targettype": {
            "location": 23,
            "names": [
              {
                "String": {
                  "sval": "casttesttype",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 54 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {
                              "ival": 1234,
                            },
                            "location": 8,
                          },
                        },
                        "location": 12,
                        "typeName": {
                          "location": 14,
                          "names": [
                            {
                              "String": {
                                "sval": "int4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 18,
                    "typeName": {
                      "location": 20,
                      "names": [
                        {
                          "String": {
                            "sval": "casttesttype",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 54 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_CASCADE",
          "objects": [
            {
              "ObjectWithArgs": {
                "objargs": [
                  {
                    "TypeName": {
                      "location": 53,
                      "names": [
                        {
                          "String": {
                            "sval": "int4",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                ],
                "objfuncargs": [
                  {
                    "FunctionParameter": {
                      "argType": {
                        "location": 53,
                        "names": [
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                      "mode": "FUNC_PARAM_DEFAULT",
                    },
                  },
                ],
                "objname": [
                  {
                    "String": {
                      "sval": "int4_casttesttype",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_FUNCTION",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 57 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateFunctionStmt": {
          "funcname": [
            {
              "String": {
                "sval": "bar_int4_text",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "sql",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "language",
                "location": 109,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "String": {
                          "sval": " SELECT ('bar'::text || $1::text); ",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "as",
                "location": 122,
              },
            },
          ],
          "parameters": [
            {
              "FunctionParameter": {
                "argType": {
                  "location": 90,
                  "names": [
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
                "mode": "FUNC_PARAM_DEFAULT",
              },
            },
          ],
          "returnType": {
            "location": 104,
            "names": [
              {
                "String": {
                  "sval": "text",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 62 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateCastStmt": {
          "context": "COERCION_IMPLICIT",
          "func": {
            "objargs": [
              {
                "TypeName": {
                  "location": 65,
                  "names": [
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            ],
            "objfuncargs": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 65,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                },
              },
            ],
            "objname": [
              {
                "String": {
                  "sval": "bar_int4_text",
                },
              },
            ],
          },
          "sourcetype": {
            "location": 15,
            "names": [
              {
                "String": {
                  "sval": "int4",
                },
              },
            ],
            "typemod": -1,
          },
          "targettype": {
            "location": 23,
            "names": [
              {
                "String": {
                  "sval": "casttesttype",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 64 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {
                              "ival": 1234,
                            },
                            "location": 8,
                          },
                        },
                        "location": 12,
                        "typeName": {
                          "location": 14,
                          "names": [
                            {
                              "String": {
                                "sval": "int4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 18,
                    "typeName": {
                      "location": 20,
                      "names": [
                        {
                          "String": {
                            "sval": "casttesttype",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`create_cast.sql > line 64 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 214,
                "relname": "pg_depend",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "refclassid",
                        },
                      },
                    ],
                    "location": 421,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 69,
                "name": "obj",
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "classid",
                              },
                            },
                          ],
                          "location": 88,
                        },
                      },
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "objid",
                              },
                            },
                          ],
                          "location": 97,
                        },
                      },
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "objsubid",
                              },
                            },
                          ],
                          "location": 104,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_describe_object",
                        },
                      },
                    ],
                    "location": 69,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 129,
                "name": "objref",
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "refclassid",
                              },
                            },
                          ],
                          "location": 148,
                        },
                      },
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "refobjid",
                              },
                            },
                          ],
                          "location": 160,
                        },
                      },
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "refobjsubid",
                              },
                            },
                          ],
                          "location": 170,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_describe_object",
                        },
                      },
                    ],
                    "location": 129,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 201,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "deptype",
                        },
                      },
                    ],
                    "location": 201,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "classid",
                            },
                          },
                        ],
                        "location": 230,
                      },
                    },
                    "location": 238,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 240,
                            "sval": {
                              "sval": "pg_cast",
                            },
                          },
                        },
                        "location": 249,
                        "typeName": {
                          "location": 251,
                          "names": [
                            {
                              "String": {
                                "sval": "regclass",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "objid",
                            },
                          },
                        ],
                        "location": 270,
                      },
                    },
                    "location": 276,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "SubLink": {
                        "location": 278,
                        "subLinkType": "EXPR_SUBLINK",
                        "subselect": {
                          "SelectStmt": {
                            "fromClause": [
                              {
                                "RangeVar": {
                                  "inh": true,
                                  "location": 295,
                                  "relname": "pg_cast",
                                  "relpersistence": "p",
                                },
                              },
                            ],
                            "limitOption": "LIMIT_OPTION_DEFAULT",
                            "op": "SETOP_NONE",
                            "targetList": [
                              {
                                "ResTarget": {
                                  "location": 286,
                                  "val": {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "oid",
                                          },
                                        },
                                      ],
                                      "location": 286,
                                    },
                                  },
                                },
                              },
                            ],
                            "whereClause": {
                              "BoolExpr": {
                                "args": [
                                  {
                                    "A_Expr": {
                                      "kind": "AEXPR_OP",
                                      "lexpr": {
                                        "ColumnRef": {
                                          "fields": [
                                            {
                                              "String": {
                                                "sval": "castsource",
                                              },
                                            },
                                          ],
                                          "location": 324,
                                        },
                                      },
                                      "location": 335,
                                      "name": [
                                        {
                                          "String": {
                                            "sval": "=",
                                          },
                                        },
                                      ],
                                      "rexpr": {
                                        "TypeCast": {
                                          "arg": {
                                            "A_Const": {
                                              "location": 337,
                                              "sval": {
                                                "sval": "int4",
                                              },
                                            },
                                          },
                                          "location": 343,
                                          "typeName": {
                                            "location": 345,
                                            "names": [
                                              {
                                                "String": {
                                                  "sval": "regtype",
                                                },
                                              },
                                            ],
                                            "typemod": -1,
                                          },
                                        },
                                      },
                                    },
                                  },
                                  {
                                    "A_Expr": {
                                      "kind": "AEXPR_OP",
                                      "lexpr": {
                                        "ColumnRef": {
                                          "fields": [
                                            {
                                              "String": {
                                                "sval": "casttarget",
                                              },
                                            },
                                          ],
                                          "location": 374,
                                        },
                                      },
                                      "location": 385,
                                      "name": [
                                        {
                                          "String": {
                                            "sval": "=",
                                          },
                                        },
                                      ],
                                      "rexpr": {
                                        "TypeCast": {
                                          "arg": {
                                            "A_Const": {
                                              "location": 387,
                                              "sval": {
                                                "sval": "casttesttype",
                                              },
                                            },
                                          },
                                          "location": 401,
                                          "typeName": {
                                            "location": 403,
                                            "names": [
                                              {
                                                "String": {
                                                  "sval": "regtype",
                                                },
                                              },
                                            ],
                                            "typemod": -1,
                                          },
                                        },
                                      },
                                    },
                                  },
                                ],
                                "boolop": "AND_EXPR",
                                "location": 370,
                              },
                            },
                          },
                        },
                      },
                    },
                  },
                },
              ],
              "boolop": "AND_EXPR",
              "location": 260,
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;
